# obsidian-typst-mate

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  Taskfile.yml  biome.json  manifest.json  package.json  tsconfig.json  versions.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: check.yml  release.yml
docs/: .gitignore  README.ja.md  README.md  Shortcuts.md  TabJump.md  install-with-brat.md  obsidian-latex-suite-migration.md
docs/.obsidian/: .gitignore  app.json  community-plugins.json  templates.json
docs/.obsidian/plugins/2hop-links-plus/: data.json
docs/.obsidian/plugins/obsidian-hover-editor/: data.json
docs/.obsidian/plugins/obsidian-linter/: data.json
docs/.obsidian/plugins/shiki-highlighter/: data.json
docs/.obsidian/plugins/templater-obsidian/: data.json
docs/API/: README.ja.md
docs/CONTRIBUTING/templates/: README.ja.md  README.md  README.unknown.md
docs/Commands/: README.ja.md
docs/Compiler/: README.ja.md  README.md
docs/LaTeX-Suite/: README.ja.md
docs/Properties/: README.ja.md  README.md
docs/Renderer/: README.ja.md
docs/Tab-Jump/: README.ja.md  README.md
docs/Trouble-Shooting/: README.ja.md
docs/TroubleShooting/: README.ja.md
docs/Typ-Editor/: README.ja.md
docs/Typst-Mate-Actions/: README.ja.md
docs/processor/: README.ja.md  README.md
docs/snippet/: README.md
resources/locales/: README.md  en copy.json  en.json  ja.json  ja.json5
scripts/: ops.ts  theme.ts
src/: api.ts  constants.ts  main.css  main.ts  style-settings.css
src/constants/: extraHints.css  extraHints.tsx  icons.css  icons.tsx  index.ts  watcher.ts
src/core/: editor.ts
src/core/editor/: editor.css  editor.ts  highlight.css  math.ts
src/core/editor/elements/: SnippetSuggest.ts  SymbolSuggest.ts
src/core/editor/extensions/: build.ts
src/core/editor/utils/: tokenizer.ts
src/core/mdEditor/: build.ts  index.ts
src/core/mdEditor/elements/: InlinePreview.ts  SnippetSuggest.ts  SymbolSuggest.ts
src/core/settings/: index.ts  settings.css  settings.ts
src/core/settings/components/: processor.ts
src/data/: settings.ts  symbols.json
src/data/actions/: index.ts  long-press.json  type.json
src/editor/: index.ts
src/editor/markdown/: build.ts  index.ts
src/editor/markdown/actions/: JumpFromClick.ts
src/editor/markdown/elements/: InlinePreview.ts
src/editor/shared/: index.ts
src/editor/typst/: build.ts  index.ts
src/editorSimple/: TODO.md  index.ts  js.ts  typst.ts
src/editorSimple/extensions/: Theme.ts
src/extensions/: excalidraw.ts
src/i18n/: fragment.ts  index.ts  markup.ts
src/lib/: worker.ts
src/libs/: action.ts  extension.css  extension.tsx  features.ts  index.ts  macro.ts  processor.css  processor.ts  profile.ts  typst.css  typst.ts  worker.ts
src/libs/appUtils/: index.ts
src/libs/commands/: format-typst.ts  index.ts  open-typst-tools.ts  reload-tag-files.ts  tex2typ.ts  toggle-background-rendering.ts
src/libs/editorHelper/: index.ts  miniEditor.ts
src/libs/events/: css-change.ts  index.ts  resize.ts  vim-mode-change.ts
src/libs/extensionManager/: extension.css  index.tsx  settings.ts
src/libs/fileManager/: index.ts  utils.ts
src/libs/i18n/: fragment.ts  index.ts
src/libs/patches/: index.ts  mathJax.ts  modalOpen.ts
src/libs/protocolHandlers/: index.ts  openLinkText.ts  reloadTypstmate.ts
src/libs/rendererManager/: index.css  index.ts
src/libs/settingsManager/: index.ts  migration.ts
src/libs/tmActionsManager/: definition.ts  index.ts  utils.ts
src/libs/typstManager/: index.css  index.ts  worker.ts
src/libs/utils/: icons.ts
src/plugins/: excalidraw.ts  style-settings.css
src/types/: api.d.ts  codemirror.d.ts  github.d.ts  global.d.ts  jsons.d.ts  obsidian.d.ts  singleton.d.ts  typst-syntax.d.ts  typst.d.ts  untar-sync.d.ts
src/ui/: index.ts
src/ui/components/: Diagnostic.css  Diagnostic.tsx  Icon.tsx  SimpleList.css  SimpleList.tsx  Tabs.css  Tabs.tsx  TypstCode.ts  decorations.tsx  icon.css
src/ui/elements/: HTML.css  HTML.ts  SVG.css  SVG.ts  Typst.css  Typst.ts  diagnostics.ts
src/ui/embeds/: index.ts
src/ui/modals/: actionJson.css  actionJson.ts  diagnostic.ts  excalidraw.ts  exportTool.ts  font.css  font.ts  miniEditor.ts  processorExt.ts  templateSelect.ts
src/ui/settingsTab/: index.css  index.ts  index.tsx
src/ui/settingstab/: index.ts  shared.css
src/ui/statusBarItem/: index.tsx  statusBarItem.css  tooltip.ts
src/ui/styles/: index.ts  main.css  textarea.css
src/ui/views/: index.ts
src/utils/: crashTracker.ts  custromElementRegistry.ts  export.ts  file.ts  notice.ts  tags.ts  typstSyntax.ts
src/utils/crates/: LICENSE
tests/crates/std/: char.test.ts  str.test.ts  unicode.test.ts
tests/crates/typst-syntax/: lines.test.ts  package.test.ts  path.test.ts  set.test.ts  span.test.ts
tests/crates/unicode-math-class/: index.test.ts
tests/crates/unicode_ident/: index.test.ts
tests/crates/unicode_script/: index.test.ts
tests/crates/unscanny/: index.test.ts
tests/i18n/: consistency.test.ts  index.test.ts  markup.test.ts  unused.test.ts
tests/utils/: hashLike.test.ts  tags.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs  vfs.rs  world.rs
wasm/src/lexer/: bracket.rs
wasm/src/parser/: bracket.rs
wasm/src/serde/: bracket.rs  completion.rs  definition.rs  diagnostic.rs  font.rs  format.rs  html.rs  htmle.rs  htmlm.rs  jump.rs  mod.rs  options.rs  package.rs  pdf.rs  pdfe.rs  pdfr.rs  pnge.rs  pngr.rs  svg.rs  svge.rs  svgm.rs  svgp.rs  svgr.rs  tooltip.rs  value.rs
wasm/src/serde/values/: angle.rs  angle.ts  args.rs  args.ts  array.rs  array.ts  array_.rs  array_.ts  auto.rs  bool.rs  bytes.rs  bytes.ts  color.rs  color.ts  content.rs  content.ts  datetime.rs  datetime.ts  decimal.rs  decimal.ts  dict.rs  dict.ts  duration.rs  duration.ts  dyn.rs  dyn.ts  dynamic.rs  float.rs  fraction.rs  fraction.ts  func.rs  func.ts  gradient.rs  gradient.ts  index.ts  int.rs  label.rs  label.ts  length.rs  length.ts  (+22 more)
wasm/src/serde/values/utils/: index.ts
wasm/src/tools/: symbol.rs
wasm/src/world/: library.rs  mod.rs  state.rs
(+414 files in other folders)
