[package]
name = "typst-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["rc"]
stable = [
    "typst_stable",
    "typst-ide_stable",
    "typst-html_stable",
    "typst-svg_stable",
    "typst-pdf_stable",
    "typst-assets_stable",
    "typst-timing_stable",
]
rc = [
    "typst_rc",
    "typst-ide_rc",
    "typst-html_rc",
    "typst-svg_rc",
    "typst-pdf_rc",
    "typst-assets_rc",
    "typst-timing_rc",
]

[dependencies]
typst_stable = { package = "typst", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-ide_stable = { package = "typst-ide", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-svg_stable = { package = "typst-svg", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-pdf_stable = { package = "typst-pdf", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-html_stable = { package = "typst-html", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-assets_stable = { package = "typst-assets", git = "https://github.com/typst/typst-assets.git", tag = "v0.13.1", features = [
    "fonts",
], optional = true }
typst-timing_stable = { package = "typst-timing", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }

typst_rc = { package = "typst", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }
typst-ide_rc = { package = "typst-ide", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }
typst-svg_rc = { package = "typst-svg", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }
typst-pdf_rc = { package = "typst-pdf", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }
typst-html_rc = { package = "typst-html", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }
typst-assets_rc = { package = "typst-assets", git = "https://github.com/typst/typst-assets.git", tag = "v0.14.0-rc.1", features = [
    "fonts",
], optional = true }
typst-timing_rc = { package = "typst-timing", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.1", optional = true }

unscanny = "^0.1"

mitex = "^0.2"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
serde = "^1.0"
serde-wasm-bindgen = "^0.6"
tsify = "^0.5"
console_error_panic_hook = "^0.1"

rayon = "^1.11"
rustc-hash = "^2.1"

chrono = "^0.4"
send_wrapper = "^0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
