[package]
name = "typst-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["latest"]
latest = [
    "typst_latest",
    "typst-ide_latest",
    "typst-html_latest",
    "typst-svg_latest",
    "typst-pdf_latest",
    "typst-assets_latest",
    "typst-timing_latest",
]
legacy = [
    "typst_legacy",
    "typst-ide_legacy",
    "typst-html_legacy",
    "typst-svg_legacy",
    "typst-pdf_legacy",
    "typst-assets_legacy",
    "typst-timing_legacy",
]

[dependencies]
# latest
typst_latest = { package = "typst", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }
typst-ide_latest = { package = "typst-ide", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }
typst-svg_latest = { package = "typst-svg", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }
typst-pdf_latest = { package = "typst-pdf", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }
typst-html_latest = { package = "typst-html", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }
typst-assets_latest = { package = "typst-assets", git = "https://github.com/typst/typst-assets.git", tag = "v0.14.0-rc.2", features = [
    "fonts",
], optional = true }
typst-timing_latest = { package = "typst-timing", git = "https://github.com/typst/typst.git", tag = "v0.14.0-rc.2", optional = true }

# legacy
typst_legacy = { package = "typst", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-ide_legacy = { package = "typst-ide", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-svg_legacy = { package = "typst-svg", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-pdf_legacy = { package = "typst-pdf", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-html_legacy = { package = "typst-html", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }
typst-assets_legacy = { package = "typst-assets", git = "https://github.com/typst/typst-assets.git", tag = "v0.13.1", features = [
    "fonts",
], optional = true }
typst-timing_legacy = { package = "typst-timing", git = "https://github.com/typst/typst.git", tag = "v0.13.1", optional = true }


unscanny = "^0.1"

mitex = "^0.2"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
serde = "^1.0"
serde-wasm-bindgen = "^0.6"
tsify = "^0.5"
console_error_panic_hook = "^0.1"

rayon = "^1.11"
rustc-hash = "^2.1"

chrono = "^0.4"
send_wrapper = "^0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
