[package]
name = "typst-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = { git = "https://github.com/typst/typst", package = "typst" }
typst-ide = { git = "https://github.com/typst/typst", package = "typst-ide" }
typst-svg = { git = "https://github.com/typst/typst", package = "typst-svg" }
typst-pdf = { git = "https://github.com/typst/typst", package = "typst-pdf" }
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-timing = { git = "https://github.com/typst/typst", package = "typst-timing" }
comemo = "^0"
unscanny = "^0.1"

tylax = { version = "^0.2", features = [] }

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
serde = "^1.0"
serde-wasm-bindgen = "^0.6"
tsify = "^0.5"
console_error_panic_hook = "^0.1"

rayon = "^1.11"
rustc-hash = "^2.1"

chrono = "^0.4"
send_wrapper = "^0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = "debuginfo"
